# IT_Academy

./: .gitignore  README.md
.github/workflows/: docker.yml  hw.yml  main_docker.yml
Docker/: Dockerfile
Task_1/: CMakeLists.txt
Task_1/lib/: CMakeLists.txt
Task_1/lib/include/: hello.h
Task_1/lib/source/: hello.cpp
Task_1/test/: CMakeLists.txt  test.cpp
Task_2/: CMakeLists.txt
Task_2/configs/SDL2/: SDL2Targets-debug.cmake  SDL2Targets.cmake
Task_3_1/: CMakeLists.txt  main.cpp
Task_3_2/: CMakeLists.txt
Task_3_2/engine/: CMakeLists.txt
Task_3_2/engine/include/: engine.h
Task_3_2/engine/src/: engine.cpp
Task_3_2/game/: CMakeLists.txt  game.cpp
Task_3_4/: CMakeLists.txt
Task_3_4/engine/: CMakeLists.txt
Task_3_4/engine/include/: engine.h
Task_3_4/engine/src/: engine.cpp
Task_3_4/game/src/: game.cpp
Task_3_4/lib_manager/: CMakeLists.txt
Task_3_4/lib_manager/include/: lib_manager.h
Task_3_4/lib_manager/src/: lib_manager.cpp
Task_4/: CMakeLists.txt
Task_4/ppm_base/: CMakeLists.txt
Task_4/ppm_base/include/: ppm_base.h  render.h
Task_4/ppm_base/src/: basic_structures.cpp  canvas.cpp  line_render.cpp  raster.cpp  triangle.cpp
Task_4/test/: gfx.cpp  gfx.h  test.cpp
Task_5/: CMakeLists.txt  main.cpp  vertexes.txt
Task_5/enginelib/: CMakeLists.txt
Task_5/enginelib/gl_shaders/: triangle_test.frag  triangle_test.vert
Task_5/enginelib/include/: engine.h
Task_5/enginelib/src/: engine.cpp
Task_5/glad/: CMakeLists.txt
Task_6/: CMakeLists.txt
Task_6/engine/: CMakeLists.txt
Task_6/engine/include/: engine.h
Task_6/engine/src/: device_attach_base.cpp  render_base.cpp  render_structures.cpp
Task_6/game/src/: game.cpp
Task_6/glad/: CMakeLists.txt
Task_6/glad/include/glad/: glad.h
Task_6/glad/src/: glad.c
game2D/engine2D/: CMakeLists.txt
game2D/engine2D/common.old/include/: .window_manager.h.kate-swp  window_manager.h
game2D/engine2D/include/core/: engine.h  igame.h
game2D/engine2D/include/input/: input_event.h  input_manager.h
game2D/engine2D/include/render/: frame_structures.h  index_buffer.h  renderer.h  shader_program.h  sprite2D.h  sprite_animator.h  texture2D.h  vertex_array.h  vertex_buffer.h  vertex_buffer_descriptor.h
game2D/engine2D/include/resources/: resource_manager.h
game2D/engine2D/include/sound/: sound_buffer.h  wav_sound.h
game2D/engine2D/include/system/: window_manager.h
game2D/engine2D/include/system.old/: window_manager.h.old
game2D/engine2D/renderer.old/include/: index_buffer.h  shader_program.h  vertex_array.h  vertex_buffer.h
game2D/engine2D/renderer.old/src/: index_buffer.cpp  shader_program.cpp  vertex_array.cpp  vertex_buffer.cpp
game2D/engine2D/resources.old/include/: resource_manager.h
game2D/engine2D/resources.old/src/: resource_manager.cpp
game2D/engine2D/src/core/: engine.cpp
game2D/engine2D/src/input/: input_manager.cpp
game2D/engine2D/src/render/: index_buffer.cpp  renderer.cpp  sprite2D.cpp  texture2D.cpp  vertex_array.cpp  vertex_buffer.cpp
game2D/engine2D/src/resources/: resource_manager.cpp
game2D/engine2D/src/sound/: sound_buffer.cpp
game2D/engine2D/src/system.old/: window_manager.cpp.old
game2D/game/src/: main.cpp
game2D/res/shaders/: test_shader.frag  test_shader.vert
sound_test/: CMakeLists.txt  main.cpp
sound_test/include/: sound.h
sound_test/src/: sound.cpp
